--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,32 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
-# TypeScript
-*.tsbuildinfo
-
-# React
-build/
+# Build output
 dist/
+build/
+
+# IDE/Editor specific
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Logs
+logs/
+*.log
+
+# Dependency directories
+jspm_packages/
+bower_components/
+
+# Testing
+coverage/
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
+
+# TypeScript
+*.js
+*.js.map
+*.d.ts
