--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "private": true,
   "workspaces": [
-    "infrastructure/*",
-    "frontend/*",
-    "backend/*"
+    "infrastructure",
+    "frontend",
+    "backend"
   ]
 }
