--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "ecommerce-project",
+  "name": "serverless-ecommerce-project",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/luke-weller/ecommerce-project.git",
-  "author": "luke-weller <wellerluke@hotmail.com>",
+  "repository": "https://github.com/luke-weller/serverless-ecommerce-project.git",
+  "author": "luke-weller <lukeweller@icloud.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/gulp": "^4.0.17",
+    "gulp": "^5.0.0",
     "typescript": "^5.4.5"
   },
   "private": true,
