--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.17",
+    "@types/jest": "^29.5.12",
+    "aws-sdk-mock": "^6.0.4",
     "gulp": "^5.0.0",
+    "jest": "^29.7.0",
     "typescript": "^5.4.5"
   },
   "private": true,
